--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,9 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="162dp"
         android:layout_marginRight="162dp"
+        android:layout_marginBottom="272dp"
         android:text="VolumeSense"
+        app:layout_constraintBottom_toTopOf="@+id/MicButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
